# mandarin-market-oracle

./: .env.example  .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements-evm.txt  requirements.txt
.github/workflows/: ci.yml
contracts/: ReasoningRegistry.sol
data/: proof_receipts.json
docs/: submission.md  technical_design.md
oracle/: __init__.py  api.py  config.py  engine.py  intake.py  llm_reasoning.py  models.py  polymarket.py  proof.py  repository.py  sources.py  validation.py
scripts/: arc_testnet_status.py  deploy_registry.py  run_agent.py
tests/: test_engine.py
web/: app.js  index.html  styles.css
