[project]
name = "mandarin-market-oracle"
version = "0.2.0"
description = "Compliance-safe Mandarin signal intelligence for prediction markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.14",
  "pydantic==2.12.5",
  "uvicorn[standard]==0.32.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]
evm = [
  "web3==7.14.0",
]

[project.scripts]
oracle-agent = "scripts.run_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
